ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: ingress
spec:
  rules:
  - host: atg-staging.padungsilpa.group
    http:
      paths:
      - backend:
          serviceName: pse-atg-react-staging
          servicePort: 8080
        path: /*
  tls:
  - hosts:
    - atg-staging.padungsilpa.group
    secretName: ingress-tls
